kubernetes/demo-form-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-form-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: demo-form
  template:
    metadata:
      labels:
        component: demo-form
    spec:
      containers:
        - name: demo-form
          image: ksraj123/demo-form:v1
          ports:
            - containerPort: 3000
