kubernetes/demo-kafka-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-kafka-consumer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: demo-kafka-consumer
  template:
    metadata:
      labels:
        component: demo-kafka-consumer
    spec:
      containers:
        - name: demo-kafka-consumer
          image: ksraj123/demo-kafka-consumer:v1.1
          ports:
            - containerPort: 3000
