kubernetes/form-submission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-submission-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: form-submission
  template:
    metadata:
      labels:
        component: form-submission
    spec:
      containers:
        - name: form-submission-handler
          image: ksraj123/form-submission-handler
          ports:
            - containerPort: 3000
