kubernetes/kafka-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kafka-consumer
  template:
    metadata:
      labels:
        component: kafka-consumer
    spec:
      containers:
        - name: kafka-consumer
          image: ksraj123/kafka-consumer:v1
          ports:
            - containerPort: 3000
