kubernetes/student-data-form-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-data-form-consumer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: student-data-form-consumer
  template:
    metadata:
      labels:
        component: student-data-form-consumer
    spec:
      containers:
        - name: student-data-form-consumer
          image: ksraj123/student-data-form-consumer:v1
          ports:
            - containerPort: 3000
