kubernetes/student-data-form-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-data-form-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: student-data-form
  template:
    metadata:
      labels:
        component: student-data-form
    spec:
      containers:
        - name: student-data-form
          image: ksraj123/student-data-form:v1
          ports:
            - containerPort: 3000
