kubernetes/demo-form-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-form-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: demo-form
  ports:
    - port: 3000
      targetPort: 3000
