kubernetes/form-submission-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: form-submission-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: form-submission
  ports:
    - port: 3000
      targetPort: 3000
