kubernetes/student-data-form-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-data-form-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: student-data-form
  ports:
    - port: 3000
      targetPort: 3000
